JMAP dispatcher function and mechanism
